service.yml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp-service
spec:
  selector: 
    run: nodeapp
  type: NodePort    
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
      name: http
