ingress-rules.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingressnginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: nodeapp-service
            port:
              number: 8080
